--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
-https://codeload.github.com/KurimuzonAkuma/pyrogram/zip/refs/heads/dev
-# --- For-Bot-Working --------- #
-pyrogram
+#https://codeload.github.com/KurimuzonAkuma/pyrogram/zip/refs/heads/dev
+pyrofork==2.3.45 
 TgCrypto
 pyromod==1.5
-python-dotenv
+schedule
+APscheduler
 # --- For-Database ------------ #
 pymongo
+motor
 dnspython
 # --- For-Web-Response ------- #
 aiohttp
+python-dotenv
+# --- For-Web-Response ------- #
+pytz
+requests
+bs4
+aiofiles
 asyncio
-psutil
